--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "accounting-js": "^1.1.1",
     "firebase": "^4.9.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
